@@ -1,0 +1,4 @@
+#!/bin/sh
+
+perl die_slave.pl &
+perl die_master.pl
