@@ -1,0 +1,4 @@
+#!/bin/sh
+
+perl full_slave.pl &
+perl full_master.pl
